<resources>
    <string name="app_name">DestinationApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Kategori</string>
    <string name="hotel">Hotel</string>
    <string name="pantai">Pantai</string>
    <string name="candi">Candi</string>
    <string name="paling_banyak_dikunjungi">Paling Banyak Dikunjungi</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="search">Search</string>
</resources>