<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".mainfragment.HomeFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_tour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:paddingVertical="5dp"
                />

            <TextView
                app:layout_constraintTop_toBottomOf="@id/rv_top_tour"
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="14dp"
                android:text="@string/category"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            <LinearLayout
                android:id="@+id/ll_category"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:layout_constraintStart_toStartOf="@id/tv_category"
                app:layout_constraintEnd_toEndOf="@id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/all_category"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/iv_all_category"
                        android:src="@drawable/ic_all_category"
                        android:layout_marginVertical="5dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>
                    <TextView
                        android:id="@+id/tv_all_category"
                        android:text="Semua"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginVertical="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/temple_category"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/iv_temple_category"
                        android:src="@drawable/ic_temple"
                        android:layout_marginVertical="5dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>
                    <TextView
                        android:id="@+id/tv_temple_category"
                        android:text="@string/candi"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:layout_marginVertical="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/beach_category"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_beach_category"
                        android:src="@drawable/ic_beach"
                        android:layout_marginVertical="5dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>
                    <TextView
                        android:id="@+id/tv_beach_category"
                        android:text="@string/pantai"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:layout_marginVertical="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/hotel_category"
                    android:orientation="vertical"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_hotel_category"
                        android:src="@drawable/ic_hotel"
                        android:layout_marginVertical="5dp"
                        android:layout_width="55dp"
                        android:layout_height="55dp"/>
                    <TextView
                        android:id="@+id/tv_hotel_category"
                        android:text="@string/hotel"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:layout_marginVertical="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_best_tour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ll_category"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="14dp"
                android:text="@string/paling_banyak_dikunjungi"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_best_tour"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_best_tour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="11dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>

